# AI-SQL-Management-app

./: .env  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: ensure_exit.py  main.py
src-tauri/src/: lib.rs  mysqlcmd.rs  pgcmd.rs  pythonmanager.rs
src/api/: ai.ts
src/app/: globals.css  page.tsx
src/components/: pgtest.tsx  testcomp.tsx
src/components/codeEditor/: config.ts  index.tsx
src/components/containers/: resizable.tsx
src/components/footer/: index.tsx
src/components/loading/: index.tsx
src/components/mainwin/: index.tsx
src/components/modals/: connectionModal.tsx
src/components/output/: index.tsx  table.tsx
src/components/toolbar/: index.tsx
src/components/treeView/: index.tsx
src/providers/: aiContext.tsx  dataContext.tsx  editorContext.tsx
