[package]
name = "sql_manager"
version = "0.1.0"
description = "Ai SQL Manager"
authors = ["sahan Bandara"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.18", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.23", features = [] }
mysql = "25.0.1"
postgres = "0.19.7"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
